# assignment-eca-huy

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: app.py
configs/: fastapi_config.py  global_config.py  train_config.py
lexicon/: automated.csv  bulk.csv  financial.csv  legal.csv  notification.csv  request.csv  urgency.csv
lexicon/preprocess/: boilerplate.csv  signature.csv
notebooks/: 01_eda.ipynb  02_labels.ipynb  03_classification.ipynb  04_eval.ipynb  04_monitor.ipynb  05_monitor.ipynb  test.ipynb
scripts/: run_data.py  run_eval.py  run_monitor.py  run_train.py  run_uvicorn.py
src/emailurgency/models/: berttopic.py  classifier.py  labeler.py  lexicon.py  lora.py  vectordb.py
src/emailurgency/pipelines/: dataloader.py  datasetbuilder.py  deduplicate.py  evaluation.py  feature_extraction.py  monitoring.py  preprocess.py
src/emailurgency/schemas/: data.py  eval.py  features.py  models.py  monitor.py
tests/: conftest.py  test_data.py  test_eval.py  test_monitor.py  test_train.py
