[project]
name = "emailurgency"
version = "0.1.0"
description = "email urgency classification on enron email unlabeled dataset as part of tribe EC&A assignment"
authors = [
    {name = "huy huynh",email = "huy.huynh@ing.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.2,<2.5)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "tqdm (>=4.68.3,<5.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "click (>=8.4.2,<9.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "faiss-cpu (>=1.14.3,<2.0.0)",
    "hdbscan (>=0.8.44,<0.9.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "bertopic (>=0.17.4,<0.18.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "optuna (>=4.9.0,<5.0.0)",
    "snorkel (>=0.10.0,<0.11.0)",
    "datasets (>=5.0.0,<6.0.0)",
    "peft (>=0.19.1,<0.20.0)",
    "transformers (>=5.12.1,<6.0.0)",
    "fastapi (>=0.138.2,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
torch = {version = "2.5.1+cu121", source = "pytorch"}
torchvision = {version = "0.20.1+cu121", source = "pytorch"}
torchaudio = {version = "2.5.1+cu121", source = "pytorch"}
